--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <img src="assets/images/group-larrarte.svg" alt="Larrarte">
+          <img src="assets/images/group-larrarte.svg" alt="Larrarte" class="img-fluid">
           <h2 class="mt-5 mb-3" style="font-weight: 700">Potenciando al inversor uruguayo desde 1995</h2>
           <h5 style="font-weight: 400">Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br class="d-none d-lg-block">general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br class="d-none d-lg-block"> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br class="d-none d-lg-block">sólidos, transparentes y seguros.</h5>
         </div>
@@ -93,9 +93,9 @@
     </div>
   </section>
   <section id="investment">
-    <div class="container-fluid p-5">
+    <div class="container-fluid ipadding">
       <div class="row justify-content-center">
-        <h2 class="mb-5" style="color: #373948">Te ofrecemos diferentes mecanismos de inversión para <br>diversificar tu capital</h2>
+        <h2 class="mb-5" style="color: #373948">Te ofrecemos diferentes mecanismos de inversión para <br class="d-none d-lg-block">diversificar tu capital</h2>
         <div class="col-12 grid-investment">
           <div class="PGA investment">
             <div class="itop">
