--- a/PGA.html
+++ b/PGA.html
@@ -29,17 +29,17 @@
     </div>
   </section>
   <section id="dynamic-table">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
           <h5 class="mb-5 text-center">Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital. Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
         </div>
       </div>
-      <div class="row" id="carouselcard">  
+      <div class="row" id="carouselcard">
 <!-- <div class="owl-carousel owl-theme owl"> -->
-        <div class="col-lg-3 col-left item pe-sm-0">
+        <div class="col-lg-3 item pe-sm-0">
 
-            <div class="card">
+            <div class="card prueba">
               <ul class="list-group list-group-flush">
                 <li class="list-group-item list1">
                   <div class="img-list">
@@ -75,10 +75,12 @@
                 </li>
               </ul>
             </div>
-            <h6 style="color: #373948; font-weight: 700">Todas las categorías cuentan con una <br>disponibilidad total de la inversión</h6>
+            <div class="card-textp">
+              <h6 style="color: #373948; font-weight: 700">Todas las categorías cuentan con <br>una disponibilidad total de la inversión</h6>
+            </div>
           </div>
 
-        <div class="col-lg-3 col-right item ps-sm-0">
+        <div class="col-lg-3 item ps-sm-0">
           <div class="card" style="text-align: center;">
             <div class="card-header" style="background-color: #0B422F">
               <h4 style="color: #FFFFFF">Categoría<br>Cría</h4>
@@ -97,7 +99,7 @@
           <a href="#" class="btn btn-primary">Me interesa</a>
         </div>
 
-        <div class="col-lg-3 col-right item">
+        <div class="col-lg-3 item">
           <div class="card" style="text-align: center;">
             <div class="card-header" style="background-color: #0B422F">
               <h4 style="color: #FFFFFF">Categoría<br>Re-cría</h4>
@@ -116,7 +118,7 @@
           <a href="#" class="btn btn-primary">Me interesa</a>
         </div>
 
-        <div class="col-lg-3 col-right item">
+        <div class="col-lg-3 item">
           <div class="card" style="text-align: center;">
             <div class="card-header" style="background-color: #0B422F">
               <h4 style="color: #FFFFFF">Categoría<br>Gordo e invernada</h4>
