--- a/Administracion.html
+++ b/Administracion.html
@@ -46,7 +46,7 @@
                 <img src="assets/images/admin.jpg" class="img-fluid" alt="Larrarte">
               </div>
               <div class="col-lg-6 col-12">
-                <div class="card-body">
+                <div class="card-body card-rtext">
                   <h2 class="card-title">Administración</h2>
                   <h5 class="card-text lh-base">Nuestra empresa desde sus comienzos se dedica a brindar los servicios de administración para establecimientos rurales. Contamos con un equipo de trabajo administrativo y de campo con bastos conocimientos en la materia, trabajando en campos de todo Uruguay. En la actualidad tenemos clientes que confían en nuestra empresa para desarrollar Administración en los Departamentos de Salto Artigas y Rivera.</h5>
                 </div>
@@ -59,7 +59,7 @@
           <div class="card">
             <div class="row g-0 itrevert">
               <div class="col-lg-6 col-12">
-                <div class="card-body">
+                <div class="card-body card-ltext">
                   <h2 class="card-title">Servicios Logísticos</h2>
                   <h5 class="card-text lh-base">Brindamos servicios dentro del establecimiento a productores que cuentan con capital humano reducido. Ayudamos al productor en realizar sus trabajos en tiempo y forma cómo lo requiere su rodeo. Trabajos tales como vacunación, yerras, trabajos de trazabilidad, embarques o baños sanitarios.</h5>
                 </div>
@@ -77,7 +77,7 @@
                 <img src="assets/images/gestion.jpg" class="img-fluid" alt="Larrarte">
               </div>
               <div class="col-lg-6 col-12">
-                <div class="card-body">
+                <div class="card-body card-rtext">
                   <h2 class="card-title">Gestión de Sucesiones Rurales</h2>
                   <h5 class="card-text lh-base">Nuestro equipo jurídico y de campo se fusionan para realizar este trabajado de forma eficiente y sin contratiempos. Al momento de realizar sucesiones en el rubro ganadero, no solo se contempla el área legal de documentos sino también la producción del establecimiento. Nuestro equipo de campo esta preparado para realizar la contabilidad de los rodeos, separaciones y todos los trabajo que la sucesión requiera así como, controles y resúmenes de trazabilidad o liquidaciones.</h5>
                 </div>
@@ -89,7 +89,7 @@
           <div class="card">
             <div class="row g-0 itrevert">
               <div class="col-lg-6 col-12">
-                <div class="card-body">
+                <div class="card-body card-ltext">
                   <h2 class="card-title">Administración y Organización de Remates</h2>
                   <h5 class="card-text lh-base">Desde el 2016 tenemos varios productores cabañeros, que confían esta ardua tarea en nosotros, la administración y organización de remates ganaderos o de cabaña es uno de nuestros mayores desafíos ya que en cada caso brindamos un servicio personalizado enfocado a cada productor. Tenemos varios eventos ya realizados con muy buenos resultados en esta área.</h5>
                 </div>
@@ -107,7 +107,7 @@
                 <img src="assets/images/inmo-agro.jpg" class="img-fluid" alt="Larrarte">
               </div>
               <div class="col-lg-6 col-12">
-                <div class="card-body">
+                <div class="card-body card-rtext">
                   <h2 class="card-title">Inmobiliaria Agro</h2>
                   <h5 class="card-text lh-base">Cumplimos con las funciones de Ventas , Arrendamientos o tasaciones de Establecimientos o Chacras en todo el país. Contamos con un equipo inmobiliario dedicado 100% para este sector.</h5>
                 </div>
