--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="assets/images/header.png" alt="Larrarte">
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br class="d-none d-md-block"> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
+          <h1 class="mb-5 fb">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
@@ -32,7 +32,7 @@
         <img src="assets/images/header.png" alt="Larrarte" class="w-100%">
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
+          <h1 class="mb-5 fb">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
@@ -40,7 +40,7 @@
         <img src="assets/images/header.png" alt="Larrarte" class="w-100%">
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
+          <h1 class="mb-5 fb">Hasta 10% anual</h1>
           <a href="#" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col-12">
           <img src="assets/images/group-larrarte.svg" alt="Larrarte" class="img-fluid">
-          <h2 class="mt-5 mb-3" style="font-weight: 700">Potenciando al inversor uruguayo desde 1995</h2>
+          <h2 class="mt-5 mb-5" style="font-weight: 700">Potenciando al inversor uruguayo desde 1995</h2>
           <h5 style="font-weight: 400">Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br class="d-none d-lg-block">general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br class="d-none d-lg-block"> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br class="d-none d-lg-block">sólidos, transparentes y seguros.</h5>
         </div>
       </div>
