--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="image-carousel">
     <div class="owl-carousel owl-theme">
       <div class="item">
-        <img src="assets/images/header.png" alt="Larrarte">
+        <div class="bg-carousel" style="background-image: url(assets/images/header.png)"></div>
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br class="d-none d-md-block"> con rentabilidad asegurada</h1>
           <h1 class="mb-5 fb">Hasta 10% anual</h1>
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="assets/images/header.png" alt="Larrarte" class="w-100%">
+        <div class="bg-carousel" style="background-image: url(assets/images/header.png)"></div>
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
           <h1 class="mb-5 fb">Hasta 10% anual</h1>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="assets/images/header.png" alt="Larrarte" class="w-100%">
+        <div class="bg-carousel" style="background-image: url(assets/images/header.png)"></div>
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
           <h1 class="mb-5 fb">Hasta 10% anual</h1>
@@ -105,7 +105,7 @@
             <div class="ibottom">
               <h3>Rentabilidad asegurada <br>del 8 a 10% anual</h3>
             </div>
-            <a href="#" class="btn btn-primary">Conocer más</a>
+            <a href="/pga.html" class="btn btn-primary">Conocer más</a>
           </div>
           <div class="Negocios investment">
             <div class="itop">
@@ -115,7 +115,7 @@
             <div class="ibottom">
               <h3>Rentabilidad del<br> 7 a 12% anual</h3>
             </div>
-            <a href="#" class="btn btn-primary">Conocer más</a>
+            <a href="/negocios.html" class="btn btn-primary">Conocer más</a>
           </div>
           <div class="Construccion investment">
             <div class="itop">
