--- a/PGA.html
+++ b/PGA.html
@@ -74,7 +74,7 @@
               </ul>
             </div>
             <div class="card-textp">
-              <h6 style="color: #373948; font-weight: 700">Todas las categorías cuentan con <br>una disponibilidad total de la inversión</h6>
+              <p style="color: #373948; font-weight: 700">Todas las categorías cuentan con <br>una disponibilidad total de la inversión</p>
             </div>
           </div>
         <div class="col-lg-3 item ps-sm-0">
@@ -173,7 +173,7 @@
               </h4>
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  PGA trabaja en predios ubicados en los departamentos de Tacuarembó, Artigas, Rivera y Salto. No obstante, las oficinas comerciales están ubicadas en Tacuarembó y en el centro de Montevideo.
                 </div>
               </div>
             </div>
@@ -185,7 +185,11 @@
               </h4>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Grupo Larrarte S.A es el fundador y actual encargado de administrar y mantener operativo a PGA.<br>
+                  Desde sus inicios, PGA cuenta con un equipo de trabajo conformado por tres pilares:<br>
+                  Pilar 1) Equipo Contable y Administración Agr.<br>
+                  Pilar 2) Equipo de Trabajo Rural; Veterinario, Ing. Agrónomo, Tec. Veterinario, Administrador, Capataz, Peón, Alambrador, Personal de Pasturas, Etc.<br>
+                  Pilar 3) Equipo Legal y Directorio. En cada cierre de ciclo le brindamos un informe detallado a cada inversor sobre el estado actual de su inversión y del PGA en general.
                 </div>
               </div>
             </div>
@@ -197,7 +201,8 @@
               </h4>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Para ingresar se requiere un monto mínimo de USD 10.000, no hay límites máximos de inversión en PGA.<br>
+                  Los futuros inversores con sumas inferiores a USD 50.000 serán registrados en una lista de ingreso y espera, con una cuota de registro de USD 500. Esto se da mientras se le realizan sus planes dentro del núcleo ganadero. Cada inversor podrá invertir nuevamente cuantas veces lo desee dentro de su núcleo.
                 </div>
               </div>
             </div>
@@ -209,7 +214,7 @@
               </h4>
               <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  El plazo mínimo es de 1 año desde el momento que ingresa. Recomendamos tener presente que los ciclos de producción de PGA están pensados y diagramados para ser mayores a 5 años.
                 </div>
               </div>
             </div>
@@ -221,7 +226,9 @@
               </h4>
               <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Al ingresar su inversión a PGA es convertida a capital semoviente, es decir, a cabezas de ganado vacuno.<br>
+                  En consecuencia, será registrado como productor rural ante SNIG (sistema de trazabilidad) y DICOSE, entes oficiales que controlan todos los movimientos de semovientes y registros como declaraciones juradas dentro del territorio nacional.<br>
+                  A su vez, el inversor realiza contratos de administración y otros documentos de PGA con Grupo Larrarte S.A, de esta forma podrá tener un control total sobre su capital.
                 </div>
               </div>
             </div>
@@ -233,19 +240,19 @@
               </h4>
               <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Prácticamente ninguno, PGA tiene un sistema de seguro interno sobre su capital de un 80% y el restante se compensa con lo producido por su inversión año tras año.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h4 class="accordion-header" id="headingSeven">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                  ¿Qué para si quiero retirar mi inversión antes de tiempo?
+                  ¿Qué pasa si quiero retirar mi inversión antes de tiempo?
                 </button>
               </h4>
               <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  La inversión puede ser transferida a otro inversor ya registrado en PGA, en el caso de que ningún inversor tenga interés en su capital tendrá que esperar el plazo pactado desde el inicio.
                 </div>
               </div>
             </div>
@@ -257,7 +264,7 @@
               </h4>
               <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Si, PGA es un sistema en el cual su inversión siempre está a su alcance. El inversor tiene la posibilidad de ir a los predios en donde operamos y tener jornadas de campo para tener informes detallados de los rendimientos del mismo. La producción siempre está controlada y a cargo de un equipo de trabajo con más de 20 años de trayectoria en el rubro.
                 </div>
               </div>
             </div>
@@ -269,43 +276,22 @@
               </h4>
               <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Actualmente PGA realiza el ciclo completo de cría. Por un lado tenemos rodeos de crías de vacas para obtener terneros anualmente, y por otro lado, tenemos predios destinados a la invernada de ganados para terminar en planta de faena.<br>
+                  PGA utiliza campos forestados de Grupo Larrarte S.A para realizar la recría y campos sin forestación para realizar la cría.<br>
+                  La invernada se da en predios más adecuados para cumplir el objetivo del engorde del animal, no se realiza engorde a corral.<br>
+                  Desde PGA apuntamos siempre al mejoramiento genético de nuestro rodeo basándonos en nuestra propia cabaña de las razas Angus y Braford. Esto permite una mayor rentabilidad en los predios ya que se obtienen rodeos más productivos.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h4 class="accordion-header" id="headingTen">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-                  ¿Puedo ver mi capital en producción?
+                  ¿Puedo invertir si soy extranjero?
                 </button>
               </h4>
               <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h4 class="accordion-header" id="headingEleven">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
-                  ¿Qué sistema de cría realizan?
-                </button>
-              </h4>
-              <div id="collapseEleven" class="accordion-collapse collapse" aria-labelledby="headingEleven" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h4 class="accordion-header" id="headingTwelve">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
-                  ¿Puedo invertir si soy extranjero?
-                </button>
-              </h4>
-              <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Si, PGA tiene contemplado el procedimiento para el registro e ingreso de nuevos inversores extranjeros, con el fin de brindarles la misma seguridad que a un inversor local.  Es bueno destacar que Uruguay cuenta con excelente seguridad jurídica y fiscal dándole credibilidad financiera en la región y en el mundo.
                 </div>
               </div>
             </div>
