--- a/Negocios.html
+++ b/Negocios.html
@@ -87,7 +87,8 @@
               </h4>
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Una hectárea implantada con E.glóbulus/ maidenni con destino celulosa produce, en su primer corte a los diez años, unos 160 /180 metros cúbicos sólidos por hectárea.<br>Los siguientes cortes se realizan cada 9 años, los bosques bien manejados nos brindan madera por tres cortes, es decir, unos 26/30 años.<br>Un bosque de pino elliottii o pino taeda, con destino aserrado, implica turnos de espera más largos, pero también una mayor rentabilidad.<br>Es muy común producir en un mismo bosque madera para celulosa y madera para aserradero, ya sea trabajando con diferentes especies o con la misma, variando solamente los turnos de espera para el corte.<br>Todo rendimiento será determinado por el sitio forestal, por la semilla elegida, por la tecnología utilizada en la forestación y por el adecuado manejo forestal que recibe el bosque luego de la explotación.
+
                 </div>
               </div>
             </div>
@@ -99,43 +100,43 @@
               </h4>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Muchos inversores forestales del sudeste del Uruguay han desarrollado olivos en los mismos suelos donde desarrollan su actividad forestal.<br>Los suelos de prioridad forestal del este del Uruguay, (como son el suelo tipo 2,11ª y 2,12), son aptos para el buen crecimiento de esta especie ya sea a secano o utilizando riego.<br>Distintas variedades de olivos para la producción de aceite, como por ejemplo: Arbequina, Picual y Frantoio, comparten los mismos suelos con la forestación.<br>La primer cosecha de la plantación de olivos se produce entre los 5 y 7 años de establecida, mientras que el primer corte de Eucaliptus con destino a celulosa por ejemplo, de efectuará a los 10 años de implantado.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h4 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  ¿Cuánto es el mínimo y máximo que puedo invertir?
+                  ¿Cuál es el valor de la hectárea forestada?
                 </button>
               </h4>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Una hectárea de campo desarrollado sobre suelos de aptitud forestal, ubicado en el sureste y centro este del Uruguay, implantado con fines celulósicos y/o aserradero, implica una inversión por há que parte de los U$S 3,500<br>Este monto básico por hectárea será en función de la ubicación del campo, del tipo de bosque y de su edad.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h4 class="accordion-header" id="headingFour">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                  ¿Cuál es el plazo mínimo de inversión?
+                  ¿Cual es la superficie óptima para una inversión?
                 </button>
               </h4>
               <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  No existe una superficie óptima en forestación, todo bosque bien implantado y bien ubicado es rentable.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h4 class="accordion-header" id="headingFive">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                  ¿Qué seguridad me brinda la inversión forestal?
+                  ¿Cuál es la rentabilidad de un campo forestado?
                 </button>
               </h4>
               <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  Históricamente, una inversión forestal ha llegado a generar tasas internas de retorno superiores al 12% anual.
                 </div>
               </div>
             </div>
